tests/machine/x/ocaml/group_by_left_join.error
File "/tmp/TestOCamlCompiler_VMValid_Goldengroup_by_left_join2669874890/001/group_by_left_join.ml", line 45, characters 11-12:
45 |       if r.o then
                ^
Error: Unbound record field o
