tests/machine/x/ocaml/group_by_left_join.ml
(* Generated by Mochi compiler v0.10.27 on 1970-01-01T00:00:00Z *)
  let rec __show v =
    let open Obj in
    let rec list_aux o =
      if is_int o && (magic (obj o) : int) = 0 then "" else
       let hd = field o 0 in
       let tl = field o 1 in
       let rest = list_aux tl in
       if rest = "" then __show (obj hd) else __show (obj hd) ^ "; " ^ rest
    in
    let r = repr v in
    if is_int r then string_of_int (magic v) else
    match tag r with
      | 0 -> if size r = 0 then "[]" else "[" ^ list_aux r ^ "]"
      | 252 -> (magic v : string)
      | 253 -> string_of_float (magic v)
      | _ -> "<value>"

  exception Break
  exception Continue

  type ('k,'v) group = { key : 'k; items : 'v list }

  type record1 = { mutable id : int; mutable name : string }
  type record2 = { mutable id : int; mutable customerId : int }
  type record3 = { mutable name : Obj.t; mutable count : int }
  type record4 = { mutable name : string; mutable count : int }

let customers : record1 list = [{ id = 1; name = "Alice" };{ id = 2; name = "Bob" };{ id = 3; name = "Charlie" }]
let orders : record2 list = [{ id = 100; customerId = 1 };{ id = 101; customerId = 1 };{ id = 102; customerId = 2 }]
let stats : record4 list = (let (__groups0 : (string * record1 list) list ref) = ref [] in
  List.iter (fun (c : record1) ->
      List.iter (fun (o : record2) ->
              if (o.customerId = c.id) then (
        let (key : string) = c.name in
        let cur = try List.assoc key !__groups0 with Not_found -> [] in
        __groups0 := (key, c :: cur) :: List.remove_assoc key !__groups0);
      ) orders;
  ) customers;
  let __res0 = ref [] in
  List.iter (fun ((gKey : string), gItems) ->
    let g = { key = gKey; items = List.rev gItems } in
    __res0 := { name = g.key; count = List.length (let __res1 = ref [] in
  List.iter (fun r ->
      if r.o then
    __res1 := r :: !__res1;
  ) g.items;
List.rev !__res1)
 } :: !__res0
  ) !__groups0;
  List.rev !__res0)


let () =
  print_endline ("--- Group Left Join ---");
  let rec __loop2 lst =
    match lst with
      | [] -> ()
      | (s : record4)::rest ->
        (try
          print_endline (__show (s.name) ^ " " ^ __show ("orders:") ^ " " ^ __show (s.count));
        with Continue -> ())
        ; __loop2 rest
    in
    try __loop2 stats with Break -> ()
    ;
